recursion.lessons.recursion.koch.Koch.scala.error
Koch:12: error: not found: value level
	if (level != -1){
            ^Koch:13: error: not found: value lenght
		avance(lenght/(levels+1))
                       ^Koch:16: error: not found: value lenght
		snowSide(levels-1 , lenght)
                                    ^